cabal-version: 2.4

name: gam
version: 0

library
  build-depends:
      base
    , linear
    , named
    , safe-exceptions
    , sdl2
    , text
  default-extensions:
    NoImplicitPrelude
  default-language:
    Haskell2010
  exposed-modules:
    Gam
    Gam.V
    Gam.Window
  ghc-options:
    -Wall
