cabal-version: 2.4

name: gam-internal
version: 0

library
  build-depends:
      base
    , generic-lens
    , hashable
    , lens
    , linear
    , mtl
    , sdl2
    , sdl2-image
    , sdl2-ttf
    , StateVar
    , strict-tuple
    , text
    , unliftio
    , unliftio-core
    , unordered-containers
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns
  default-language:
    Haskell2010
  exposed-modules:
    Gam.Internal.P
    Gam.Internal.Picture
    Gam.Internal.Prelude
    Gam.Internal.Render
    Gam.Internal.RGBA
    Gam.Internal.SpriteSheet
    Gam.Internal.SpriteSheetCache
    Gam.Internal.Texture
    Gam.Internal.V
    Gam.Internal.Window
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
