cabal-version: 2.2

name: gam-internal
version: 0

library
  build-depends:
      base
    , generic-lens
    , hashable
    , lens
    , linear
    , mtl
    , sdl2
    , sdl2-image
    , sdl2-ttf
    , StateVar
    , text
    , unordered-containers
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    PatternSynonyms
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  default-language:
    Haskell2010
  exposed-modules:
    Gam.Internal.FontCache
    Gam.Internal.Music
    Gam.Internal.P
    Gam.Internal.Picture
    Gam.Internal.Prelude
    Gam.Internal.Render
    Gam.Internal.RenderedTextCache
    Gam.Internal.RGBA
    Gam.Internal.SpriteSheet
    Gam.Internal.SpriteSheetCache
    Gam.Internal.TextStyle
    Gam.Internal.Texture
    Gam.Internal.Typeface
    Gam.Internal.V
    Gam.Internal.Window
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
  hs-source-dirs:
    src
