cabal-version: 2.2

name: gam-internal
version: 0

library
  build-depends:
      base
    , containers
    , generic-lens
    , hashable
    , lens
    , linear
    , mtl
    , sdl2
    , sdl2-image
    , sdl2-ttf
    , StateVar
    , strict-tuple >= 0.1.2
    , text
    , unordered-containers
    , vector
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeApplications
    ViewPatterns
  default-language:
    Haskell2010
  exposed-modules:
    Gam.Internal.AABB
    Gam.Internal.Circle
    Gam.Internal.Collage
    Gam.Internal.Config
    Gam.Internal.FontCache
    Gam.Internal.Form
    Gam.Internal.FrameCount
    Gam.Internal.Line
    Gam.Internal.LineSegment
    Gam.Internal.Idmap
    Gam.Internal.M
    Gam.Internal.Music
    Gam.Internal.P
    Gam.Internal.Prelude
    Gam.Internal.Rectangle
    Gam.Internal.Render
    Gam.Internal.RenderedTextCache
    Gam.Internal.RGB
    Gam.Internal.RGBA
    Gam.Internal.Sprite
    Gam.Internal.SpriteSheet
    Gam.Internal.SpriteSheetCache
    Gam.Internal.Textual
    Gam.Internal.Texture
    Gam.Internal.TextStyle
    Gam.Internal.Transformation
    Gam.Internal.Typeface
    Gam.Internal.V
    Gam.Internal.Window
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
  hs-source-dirs:
    src
  other-modules:
    Internal.Collage
    Internal.Form
    Internal.Sprite
    Internal.V
