cabal-version: 2.4

name: gam-main-tea
version: 0

library
  build-depends:
      base
    , gam-internal
    , sdl2
    , sdl2-mixer
    , sdl2-ttf
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns
  default-language:
    Haskell2010
  exposed-modules:
    Gam.Main.Tea
    Gam.Main.Tea.Sub
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  other-modules:
    Internal.Sub
