cabal-version: 2.4

name: gam-main-tea
version: 0

library
  build-depends:
      base
    , gam-internal
    , sdl2
    , sdl2-mixer
    , sdl2-ttf
  default-extensions:
    BangPatterns
    LambdaCase
    NoImplicitPrelude
    ScopedTypeVariables
  default-language:
    Haskell2010
  exposed-modules:
    Gam.Main.Tea
    Gam.Main.Tea.Sub
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  other-modules:
    Internal.Sub
