cabal-version: 2.2

name: gam
version: 0

library
  build-depends:
      base
    , gam-internal
    , sdl2
  default-extensions:
    NoImplicitPrelude
    PatternSynonyms
  default-language:
    Haskell2010
  exposed-modules:
    Gam
    Gam.P
    Gam.Picture
    Gam.RGBA
    Gam.SpriteSheet
    Gam.V
    Gam.Window
  ghc-options:
    -Wall
  hs-source-dirs:
    src
