cabal-version: 2.2

name: gam
version: 0

library
  build-depends:
      base
    , gam-internal
    , sdl2
  default-extensions:
    DuplicateRecordFields
    NoImplicitPrelude
    PatternSynonyms
  default-language:
    Haskell2010
  exposed-modules:
    Gam
    Gam.Collage
    Gam.Config
    Gam.Form
    Gam.Idmap
    Gam.P
    Gam.RGBA
    Gam.Sprite
    Gam.SpriteSheet
    Gam.Transformation
    Gam.V
    Gam.Window
  ghc-options:
    -Wall
  hs-source-dirs:
    src
